[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Temple.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/split_camera/SplitCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ScreenFade/ScreenFade.tscn" type="PackedScene" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Viewports" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 244.0
margin_bottom = 216.0
custom_constants/separation = 4
alignment = 1

[node name="ViewportContainer1" type="ViewportContainer" parent="Viewports"]
margin_right = 120.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="Viewports/ViewportContainer1"]
size = Vector2( 120, 216 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Temple1" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 2 )]

[node name="Camera1" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 3 )]
position = Vector2( 0, 0 )
limit_left = 0
limit_top = -1824
limit_right = 120
limit_bottom = 24
smoothing_enabled = true
editor_draw_drag_margin = true

[node name="ScreenFade1" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 4 )]

[node name="ViewportContainer2" type="ViewportContainer" parent="Viewports"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 216.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="Viewports/ViewportContainer2"]
size = Vector2( 120, 216 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Temple2" parent="Viewports/ViewportContainer2/Viewport2" instance=ExtResource( 2 )]
world_id = 2

[node name="Camera2" parent="Viewports/ViewportContainer2/Viewport2" instance=ExtResource( 3 )]
limit_left = 0
limit_top = -1824
limit_right = 120
limit_bottom = 24

[node name="ScreenFade2" parent="Viewports/ViewportContainer2/Viewport2" instance=ExtResource( 4 )]

[node name="StepTimer" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="StepTimer" to="." method="_on_StepTimer_timeout"]
